--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Titanic",
       "provenance": [],
-      "authorship_tag": "ABX9TyPu5r7W+zpNKdc8w9yPkfuC",
+      "authorship_tag": "ABX9TyPv+149D1jYBw9FSHnMdj+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +32,11 @@
       "source": [
         "# **Desafio Titanic**\n",
         "\n",
-        "O Desafio Titanic é uma das competições mais famosas que encontramos na plataforma de banco de dados do Kaggle, ele é considerado a etapa inicial para o mundo de Data Science (Ciência de Dados).\n",
+        "O Desafio Titanic é uma das competições mais famosas que encontramos na plataforma de banco de dados do Kaggle, é considerado a etapa inicial para o mundo de Data Science (Ciência de Dados).\n",
         "\n",
-        "Tomei como base a Análise Técnica do professor ***Carlos Melo*** (Sigmoidal), seguindo algumas informações apresentadas em seu código. [AQUI](https://github.com/carlosfab/data_science/blob/master/Titanic.ipynb//)\n",
+        "Exemplificado pela a Análise Técnica do professor ***Carlos Melo*** (Sigmoidal), seguindo algumas informações apresentadas em seu código. [AQUI](https://github.com/carlosfab/data_science/blob/master/Titanic.ipynb//)\n",
         "\n",
-        "Este Colab tem por objetivo realizar uma análise exploratória dos fatos retirados do Dataset, demonstrando a manipulação dos dados(limpeza, verificação de variáveis faltantes e análise das informações obtidas do Dataset) e visualização gráfica para auxílio da identificação do problema."
+        "Este Colab tem por objetivo realizar uma análise exploratória dos fatos retirados do Dataset, demonstrando a manipulação dos dados(limpeza, verificação de variáveis faltantes e análise das informações obtidas) e visualização gráfica para auxílio da identificação do problema."
       ]
     },
     {
@@ -261,9 +261,9 @@
         "id": "0Ttyxzgtl_6h"
       },
       "source": [
-        "## Legendas dos índices\n",
+        "## Legenda dos índices\n",
         "\n",
-        "Como visto anteriormente, os itens que apresentam os valores da colunas representam os índices do nosso dataframe, ou seja, são as variáveis que trabalharemos nesse notebook.\n",
+        "Como visto anteriormente, os itens que apresentam os valores das colunas representam os índices do nosso dataframe, ou seja, são as variáveis que trabalharemos nesse notebook.\n",
         "\n",
         "As variáveis se dividem em doze categorias:\n",
         "\n",
@@ -278,7 +278,7 @@
         "* **Name:** Nome do passageiro\n",
         "* **Sex:** Sexo do passageiro\n",
         "* **Age:** Idade do passageiro\n",
-        "* **SibSp:** Quantidade de côjuges e irmãos a bordo\n",
+        "* **SibSp:** Quantidade de cônjuges e irmãos a bordo\n",
         "* **Parch:** Quantidade de pais e filhos a bordo\n",
         "* **Ticket:** Número da passagem\n",
         "* **Fare:** Preço da passagem\n",
@@ -573,7 +573,7 @@
         }
       },
       "source": [
-        "# descritivo resumido dos dados (contagem, média, mediana, mínimo, máximo, primeiro, segundo e terceiro quarto)\n",
+        "# descritivo resumido dos dados (contagem, média, mediana, mínimo, máximo, primeiro, segundo e terceiro quadrantes)\n",
         "df.describe()"
       ],
       "execution_count": null,
@@ -1251,7 +1251,7 @@
         "id": "NoHfLwQngazR"
       },
       "source": [
-        "### A divisão entre as variáveis sexo, classe e o local de embarque têm correlação com a taxa de sobreviência dos tripulantes?\n",
+        "### A divisão entre as variáveis sexo, classe e o local de embarque têm correlação com a taxa de sobrevivência dos tripulantes?\n",
         "\n"
       ]
     },
@@ -1266,7 +1266,7 @@
         }
       },
       "source": [
-        "# correlação de taxa de sobrevitens com a 'Classe' x 'Local de Embarque'\n",
+        "# correlação de taxa de sobreviventes com a 'Classe' x 'Local de Embarque'\n",
         "fig, (axis1, axis2) = plt.subplots(1,2, figsize = (14,4))\n",
         "sns.lineplot(x = 'Pclass', y = 'Survived', data = df, hue = 'Embarked', style = 'Embarked', markers = True,  ci = False, ax = axis1)\n",
         "sns.barplot(x = 'Pclass', y = 'Survived', data = df, hue = 'Embarked', ci = False, ax = axis2);"
@@ -1298,7 +1298,7 @@
         }
       },
       "source": [
-        "# correlação de taxa de sobriventes entre 'Sexo' x 'Classe'\n",
+        "# correlação de taxa de sobreviventes entre 'Sexo' x 'Classe'\n",
         "fig, (axis1, axis2) = plt.subplots(1,2, figsize=(14,4))\n",
         "sns.lineplot(x = 'Pclass', y = 'Survived', data = df, hue = 'Sex', style = 'Sex', markers = True,  ci = False, ax = axis1)\n",
         "sns.barplot(x = 'Pclass', y = 'Survived', data = df, hue = 'Sex', ci = False);"
@@ -1330,7 +1330,7 @@
         }
       },
       "source": [
-        "# correlação de taxa de sobriventes entre 'Sexo' x 'Local de Embarque'\n",
+        "# correlação de taxa de sobreviventes entre 'Sexo' x 'Local de Embarque'\n",
         "fig, (axis1, axis2) = plt.subplots(1,2, figsize=(14,4))\n",
         "sns.lineplot(x = 'Sex', y = 'Survived', data = df, hue = 'Embarked', style = 'Embarked', markers = True,  ci = False, ax = axis1)\n",
         "sns.barplot(x = 'Sex', y = 'Survived', data = df, hue = 'Embarked', ci = False);"
@@ -1361,11 +1361,13 @@
         "\n",
         "Sim, há ligação entre as variáveis para alteração da taxa de sobrevivência.\n",
         "\n",
-        "Podemos verificar a correlação direta que o *Sexo*, a *Classe* e o *Local de Embarque* do tripulante exerce sobre a chance do tripulante de sobreviver.\n",
+        "Podemos verificar a correlação direta que o *Sexo*, a *Classe* e o *Local de Embarque* do tripulante exerce sobre a chance do passageiro sobreviver.\n",
         "\n",
         "A partir dos fatos já conhecidos no modo geral, como imaginado a maioria dos sobreviventes foram mulheres, ao analisarmos com mais precisão os gráficos, chegamos ao ponto que mulheres na faixa de seus 27 anos, que estavam na 1ª e 2ª Classes e que embarcaram nas cidades de Queenstown e Cherburg tinham mais chances chegando próximo dos 70% de probabilidade de sairem vivas da tragédia.\n",
         "\n",
-        "Já os homens apresentam um percentual de sobrevivência totalmente oposto, sabemos que homens de aproximadamente 30 anos, que estavam na 2ª e 3ª Classe, que embarcaram na cidade de Southampton não tiveram a mesma sorte, mostrando cerca de menos de 20% de percentual de sobrevivência ao desastre."
+        "Já os homens apresentam um percentual de sobrevivência totalmente oposto, sabemos que homens de aproximadamente 30 anos, que estavam na 2ª e 3ª Classe, que embarcaram nas cidades de Queenstown e Southampton não tiveram a mesma sorte, mostrando cerca de menos de 20% de percentual de sobrevivência ao desastre.\n",
+        "\n",
+        "De acordo com os dados retirados do Desafio, posso afirmar que no meu caso eu não sobreviveria ao desastre, pois me encaixo na faixa etária dos homens, independente do local de embarque não teria muitas chanves de sair vivo, talvez o fato que poderia alterar a taxa seria somente a classe do embarque aumentar a probabilidade para próximo dos 40%. "
       ]
     }
   ]
