--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Titanic",
       "provenance": [],
-      "authorship_tag": "ABX9TyPv+149D1jYBw9FSHnMdj+k",
+      "authorship_tag": "ABX9TyPkopSRUhJ3KSAQyKq/QKc0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1367,7 +1367,7 @@
         "\n",
         "Já os homens apresentam um percentual de sobrevivência totalmente oposto, sabemos que homens de aproximadamente 30 anos, que estavam na 2ª e 3ª Classe, que embarcaram nas cidades de Queenstown e Southampton não tiveram a mesma sorte, mostrando cerca de menos de 20% de percentual de sobrevivência ao desastre.\n",
         "\n",
-        "De acordo com os dados retirados do Desafio, posso afirmar que no meu caso eu não sobreviveria ao desastre, pois me encaixo na faixa etária dos homens, independente do local de embarque não teria muitas chanves de sair vivo, talvez o fato que poderia alterar a taxa seria somente a classe do embarque aumentar a probabilidade para próximo dos 40%. "
+        "De acordo com os dados retirados do Desafio, posso afirmar que no meu caso eu não sobreviveria ao desastre, pois me encaixo na faixa etária dos homens, independente do local de embarque não teria muitas chances de sair vivo, talvez o fato que poderia alterar a taxa seria somente a classe do embarque aumentar a probabilidade para próximo dos 40%. "
       ]
     }
   ]
