--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Titanic",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkopSRUhJ3KSAQyKq/QKc0",
+      "authorship_tag": "ABX9TyNp6v7TLEi2/So9kn4Ph3D5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,9 +56,13 @@
       "source": [
         "## História do Titanic\n",
         "\n",
-        "Nessa história romântica entre Rose e Jack, tendo como soundtrack de Celine Dion ('My heart will go on')\n",
+        "O RMS Titanic foi um navio de passageiros britânico, operado pela companhia White Star e construído em Belfast, Irlanda do Norte.\n",
+        "Foi a segunda embarcação da classe Olympic de transatlânticos, o Titanic foi projetado para ser o navio mais luxuoso e mais seguro de sua época, gerando rumores que ele não poderia ser afundado.\n",
+        "Sua construção teve início em março de 1909 e lançado ao mar em maio de 1911.\n",
         "\n",
-        "Depois eu coloco o resumo...."
+        "A embarcação tinha como trajeto a saída de Southampton para Nova York, passando por Queenstown, Irlanda e Cherbourg, França.\n",
+        "Porém como já sabemos o fato da tragédia o RMS Titanic colidiu com um iceberg na noite de 14 de abril e afundou na madrugada do dia seguinte não chegando ao seu destino final.\n",
+        "O histórico de seu naufrágio destacou vários pontos fracos de seu projeto e falhas nos procedimentos de emergência."
       ]
     },
     {
