--- a/Tesouro_Direto.ipynb
+++ b/Tesouro_Direto.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tesouro Direto",
       "provenance": [],
-      "authorship_tag": "ABX9TyNax08XpGe1ekgWl1yZJhBa",
+      "authorship_tag": "ABX9TyOV1zxASgE0HwnVldGiKlsN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,9 @@
         "\n",
         "Lançado em 2002, o Programa teve início com o intuito de transformar o acesso aos títulos públicos mais democrático.\n",
         "\n",
-        "O Tesouro Direto é um investimento com diferentes tipos de rentabilidade (prefixada, ligada à variação da inflação ou à variação da taxa de juros básica da economia - Selic), diferentes prazos de vencimento e também diferentes fluxos de remuneração."
+        "O Tesouro Direto é um investimento com diferentes tipos de rentabilidade (prefixada, ligada à variação da inflação ou à variação da taxa de juros básica da economia - Selic), diferentes prazos de vencimento e também diferentes fluxos de remuneração.\n",
+        "\n",
+        "Este título pode ser classificado como Renda Fixa, pré ou pós fixado, ou seja, a taxa de rendimento é estabelecida no início do aporte ou final, na maioria dos casos este tipo de investimento tem períodos mais longos iguais ou superiores a 2 anos."
       ]
     },
     {
@@ -47,7 +49,9 @@
       "source": [
         "## Dataset\n",
         "\n",
-        "Este banco de dados foi retirado do site Portal Brasileiro de Dados Abertos do Governo Federal e tem como informações os dados cadastrados dos investidores do título entre os anos de 2004 a 2019.\n"
+        "Este banco de dados foi retirado do site Portal Brasileiro de Dados Abertos do Governo Federal e tem como informações os dados cadastrados dos investidores do título entre os anos de 2004 a 2019.\n",
+        "\n",
+        "De acordo com o Portal, o banco de dados é atualizado mensalmente desde o início de seu programa.\n"
       ]
     },
     {
@@ -2156,6 +2160,26 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pinmwwJQOjsd"
+      },
+      "source": [
+        "# Conclusão\n",
+        "\n",
+        "A estratégia do programa de democratizar o título tem surtido efeitos, ainda pequenos levado com comparação com o número total de habitantes brasileiros em 2018 com seus 209.5 milhões, mas são fatos que já se demonstram serem expressivos uma vez que culturalmente a população brasileira não tem o hábito de guardar dinheiro.\n",
+        "Visto que em sua maioria ainda são muito tradicionais quando se fala em rendimentos, excluindo a poupança e outras formas de investimento como renda variável por exemplo.\n",
+        "\n",
+        "Como análise do perfil do investidor do Tesouro Direto baseado nos dados colhidos pelo dataset disponibilizado pelo portal, chegamos à conclusão que dos 1 milhão de cadastros realizados, em sua maioria são homens, solteiros ou casados com brasileiras natas e que moram no Estado de São Paulo.\n",
+        "\n",
+        "Quanto à profissão a opção 'Outros' não foi esclarecida ao certo se ao preencher o cadastro não havia uma melhor seleção, ou se o investidor preferiu abster-se de informá-la, mas como os números eram muito expressivos, optei por mantê-los no estudo, porém as outras carreiras de destaque são Administrador e Engenheiro, ambos com 7% de representatividade.\n",
+        "\n",
+        "Referente aos meses conseguimos enxergar que os meses de Janeiro, Março e Junho possuem os maiores números de cadastros, talvez pela promessa de mudança de hábitos para o próximo ano (Janeiro e Março) e Junho com o resgate do Imposto de Renda. Fevereiro temos como referência o Carnaval, o que explica a queda da quantidade. Fato curioso, é a queda que ocorre pós o mês de Junho, levando até Dezembro com a menor quantia de cadastros, talvez pelas festas de final de ano e ano novo. \n",
+        "\n",
+        "O Tesouro Direto trata-se de uma opção de investimento de Renda Fixa, desta forma podemos identificar o fato que os titulares estejam 'Ativos', mas tenham feito movimentação fora do prazo dos 12 meses, já que o resgate do investimento em muitos casos são de longa duração."
       ]
     }
   ]
