--- a/Tesouro_Direto.ipynb
+++ b/Tesouro_Direto.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tesouro Direto",
       "provenance": [],
-      "authorship_tag": "ABX9TyOV1zxASgE0HwnVldGiKlsN",
+      "authorship_tag": "ABX9TyNoCGuBmb+cm28SEaAmo7+n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2179,7 +2179,7 @@
         "\n",
         "Referente aos meses conseguimos enxergar que os meses de Janeiro, Março e Junho possuem os maiores números de cadastros, talvez pela promessa de mudança de hábitos para o próximo ano (Janeiro e Março) e Junho com o resgate do Imposto de Renda. Fevereiro temos como referência o Carnaval, o que explica a queda da quantidade. Fato curioso, é a queda que ocorre pós o mês de Junho, levando até Dezembro com a menor quantia de cadastros, talvez pelas festas de final de ano e ano novo. \n",
         "\n",
-        "O Tesouro Direto trata-se de uma opção de investimento de Renda Fixa, desta forma podemos identificar o fato que os titulares estejam 'Ativos', mas tenham feito movimentação fora do prazo dos 12 meses, já que o resgate do investimento em muitos casos são de longa duração."
+        "O Tesouro Direto trata-se de uma opção de investimento de Renda Fixa, desta forma podemos identificar o fato que os titulares estejam 'Ativos', mas tenham feito movimentação fora do prazo dos 12 meses, já que o resgate do investimento em muitos casos são de longa duração, levando-se em consideração a taxa regressiva de pagamento de Imposto Renda sobre o lucro quando acima de 2 anos de 20% para 15%."
       ]
     }
   ]
