--- a/Tesouro_Direto.ipynb
+++ b/Tesouro_Direto.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tesouro Direto",
       "provenance": [],
-      "authorship_tag": "ABX9TyNoCGuBmb+cm28SEaAmo7+n",
+      "authorship_tag": "ABX9TyM97auiAywb4iKr6RrUAkwi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2170,7 +2170,7 @@
       "source": [
         "# Conclusão\n",
         "\n",
-        "A estratégia do programa de democratizar o título tem surtido efeitos, ainda pequenos levado com comparação com o número total de habitantes brasileiros em 2018 com seus 209.5 milhões, mas são fatos que já se demonstram serem expressivos uma vez que culturalmente a população brasileira não tem o hábito de guardar dinheiro.\n",
+        "A estratégia do programa de democratizar o título tem surtido efeitos, ainda pequenos levado em comparação com o número total de habitantes brasileiros em 2018 com seus 209.5 milhões. Contudo, já é considerado a metade em relação ao número total de investidores na Bolsa de Valores em 2020 (2,48 miilhões), são fatos que já se demonstram serem expressivos uma vez que culturalmente a população brasileira não tem o hábito de guardar dinheiro.\n",
         "Visto que em sua maioria ainda são muito tradicionais quando se fala em rendimentos, excluindo a poupança e outras formas de investimento como renda variável por exemplo.\n",
         "\n",
         "Como análise do perfil do investidor do Tesouro Direto baseado nos dados colhidos pelo dataset disponibilizado pelo portal, chegamos à conclusão que dos 1 milhão de cadastros realizados, em sua maioria são homens, solteiros ou casados com brasileiras natas e que moram no Estado de São Paulo.\n",
