--- a/Tesouro_Direto.ipynb
+++ b/Tesouro_Direto.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tesouro Direto",
       "provenance": [],
-      "authorship_tag": "ABX9TyM97auiAywb4iKr6RrUAkwi",
+      "authorship_tag": "ABX9TyNjF++nKb+YYtscEOSOJShR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       "source": [
         "from google.colab import drive"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
       "source": [
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "source": [
         "os.listdir()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
       "source": [
         "os.chdir('/content/gdrive/My Drive/Tesouro Direto')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +182,7 @@
       "source": [
         "os.listdir()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
       "source": [
         "df = pd.read_excel('tesouro_direto.xlsx')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
         "print(f'Linhas: {df.shape[0]}')\n",
         "print(f'Colunas: {df.shape[1]}')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
         "# veriricando as nossas variáveis\n",
         "df.columns"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
         "# visualização das cinco primeiras linhas do arquivo\n",
         "df.head()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +483,7 @@
         "# as classes de cada variável\n",
         "df.dtypes"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +524,7 @@
         "# resumo estatístico do dado numérico (idade sendo o único, já que 'Codigo do Investidor' trata-se do número de identificação)\n",
         "df.describe()['Idade']"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
         "# o dataset está completo, não tendo dados faltantes\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -616,7 +616,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +633,7 @@
         "sns.set(rc={'figure.figsize':(14,10)})\n",
         "df.hist(figsize=(14,6));"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -663,7 +663,7 @@
         "idade = df['Idade'].unique()\n",
         "print(sorted(idade))"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +706,7 @@
         "# lista das profissões cadastradas\n",
         "df['Profissao'].unique()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -834,7 +834,7 @@
         "# quantidade dos cadastros das profissões\n",
         "len(df['Profissao'].unique())"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +873,7 @@
         "# contagem das sessenta primeiras profissões por ordem decrescente \n",
         "df.groupby(df['Profissao']).count()['Codigo do Investidor'].sort_values(ascending=False)[:60]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +964,7 @@
         "# separei as dez primeiras profissões para análise\n",
         "df.groupby(df['Profissao']).count()['Codigo do Investidor'].sort_values(ascending=False)[:10]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1005,7 +1005,7 @@
         "# percentual das dez profissões em relação ao total\n",
         "(df.groupby(df['Profissao']).count()['Codigo do Investidor'] / df.shape[0] * 100).sort_values(ascending=False)[:10]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1046,7 +1046,7 @@
         "prof = sns.countplot(df['Profissao'], order=df['Profissao'].value_counts().iloc[:10].index, palette='icefire')\n",
         "prof.set_xticklabels(rotation=45, fontsize=10, labels = df['Profissao'].value_counts().iloc[:10].index);"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1093,7 +1093,7 @@
         "# contagem sobre o gênero dos investidores mulheres e homens\n",
         "df.groupby(df['Genero']).count()['Codigo do Investidor']"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1126,7 +1126,7 @@
         "# percentual dos investidores mulheres e homens\n",
         "df.groupby(df['Genero']).count()['Codigo do Investidor'] / df.shape[0] * 100"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1158,7 @@
       "source": [
         "sns.countplot(df['Genero'], palette='icefire');"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1205,7 +1205,7 @@
         "# lista de todos os estados divididos pela UF\n",
         "df['UF do Investidor'].unique()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1237,7 +1237,7 @@
         "# podemos verificar que todos os Estados União estão presentes\n",
         "len(df['UF do Investidor'].unique())"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1267,7 @@
         "# contagem dos investidores divididos pelo Estado\n",
         "df.groupby(df['UF do Investidor']).count()['Codigo do Investidor'].sort_values(ascending=False)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1325,7 +1325,7 @@
         "# percentual de cadastros por Estados sobre o Total\n",
         "(df.groupby(df['UF do Investidor']).count()['Codigo do Investidor'] / df.shape[0] * 100).sort_values(ascending=False)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1382,7 +1382,7 @@
       "source": [
         "sns.countplot(df['UF do Investidor'], palette='icefire');"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1440,7 +1440,7 @@
         "df['Year'] = df['Data de Adesao'].dt.year\n",
         "df.head()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1598,7 +1598,7 @@
         "df['Month'] = df['Month'].replace(meses)\n",
         "df['Month']"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1639,7 +1639,7 @@
         "# contagem pelo mês que houve mais cadastros no título\n",
         "df.groupby(df['Month']).count()['Codigo do Investidor'].sort_values(ascending=False)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1681,7 +1681,7 @@
       "source": [
         "sns.countplot(df['Month'], palette='icefire', order=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1731,7 +1731,7 @@
         "# contagem pelo ano que houve mais cadastros\n",
         "df.groupby(df['Year']).count()['Codigo do Investidor'].sort_values(ascending=False)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1780,7 +1780,7 @@
       "source": [
         "sns.countplot(df['Year'], palette='icefire')"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,7 +1838,7 @@
       "source": [
         "df['Estado Civil'].unique()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1870,7 +1870,7 @@
       "source": [
         "df.groupby(df['Estado Civil'])['Codigo do Investidor'].count().sort_values(ascending=False)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1909,7 +1909,7 @@
       "source": [
         "(df.groupby(df['Estado Civil'])['Codigo do Investidor'].count().sort_values(ascending=False) / df.shape[0] * 100)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1949,7 +1949,7 @@
         "a = sns.countplot(df['Estado Civil'], palette='icefire')\n",
         "a.set_xticklabels(rotation=45, fontsize=10, labels = ['Casado com\\nbrasileiro nato', 'Viúvo', 'Solteiro', 'União estável', 'Divorciado', 'Separado\\njudic.', 'Desquitado','Casado com\\nbrasileiro naturalizado', 'Casado com\\nestrangeiro',]);"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2006,7 +2006,7 @@
       "source": [
         "df.groupby(df['Situacao da Conta']).count()['Codigo do Investidor']"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,7 +2038,7 @@
       "source": [
         "df.groupby(df['Situacao da Conta']).count()['Codigo do Investidor'] / df.shape[0] * 100"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2070,7 +2070,7 @@
       "source": [
         "df.groupby(df['Operou 12 Meses']).count()['Codigo do Investidor']"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2102,7 +2102,7 @@
       "source": [
         "df.groupby(df['Operou 12 Meses']).count()['Codigo do Investidor'] / df.shape[0] * 100"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2136,7 +2136,7 @@
         "sns.countplot('Situacao da Conta', data=df, palette = 'icefire', ax=ax1)\n",
         "sns.countplot('Operou 12 Meses', data=df, palette = 'icefire', ax=ax2);"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2172,6 +2172,7 @@
         "\n",
         "A estratégia do programa de democratizar o título tem surtido efeitos, ainda pequenos levado em comparação com o número total de habitantes brasileiros em 2018 com seus 209.5 milhões. Contudo, já é considerado a metade em relação ao número total de investidores na Bolsa de Valores em 2020 (2,48 miilhões), são fatos que já se demonstram serem expressivos uma vez que culturalmente a população brasileira não tem o hábito de guardar dinheiro.\n",
         "Visto que em sua maioria ainda são muito tradicionais quando se fala em rendimentos, excluindo a poupança e outras formas de investimento como renda variável por exemplo.\n",
+        "Um fato que podemos tirar como premissa é o aumento dos cadastros realizados a partir do ano de 2016 e os anos subsequentes, o que conseguimos considerar é o aumento do conhecimento e interesse do brasileiro quanto aos títulos e taxas de rendimento, considerando o mesmo período (2016) a taxa selic chegou aos seus 14% de rentabilidade.\n",
         "\n",
         "Como análise do perfil do investidor do Tesouro Direto baseado nos dados colhidos pelo dataset disponibilizado pelo portal, chegamos à conclusão que dos 1 milhão de cadastros realizados, em sua maioria são homens, solteiros ou casados com brasileiras natas e que moram no Estado de São Paulo.\n",
         "\n",
